# ForgeFFI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.en.md  README.md  SECURITY.md
crates/forgeffi/: Cargo.toml
crates/forgeffi-base/: Cargo.toml
crates/forgeffi-base/src/: error.rs  lib.rs  netif.rs
crates/forgeffi-ffi/: Cargo.toml
crates/forgeffi-ffi/src/: lib.rs
crates/forgeffi-fs/: Cargo.toml
crates/forgeffi-fs-ffi/: Cargo.toml
crates/forgeffi-fs-ffi/src/: lib.rs
crates/forgeffi-net/: Cargo.toml
crates/forgeffi-net-ffi/: Cargo.toml
crates/forgeffi-net-ffi/src/: exports.rs  lib.rs  mem.rs
crates/forgeffi-sys/: Cargo.toml
crates/forgeffi-sys-ffi/: Cargo.toml
crates/forgeffi-sys-ffi/src/: lib.rs
crates/forgeffi-sys/src/: lib.rs
crates/forgeffi-sys/src/netif/: mod.rs  platform_linux.rs  platform_macos.rs  platform_unsupported.rs  platform_windows.rs
crates/forgeffi/src/: lib.rs
crates/tool/: Cargo.toml
crates/tool-ffi/: Cargo.toml
crates/tool-ffi/src/: lib.rs
crates/tool-fs/: Cargo.toml
crates/tool-fs-ffi/: Cargo.toml
crates/tool-fs-ffi/src/: lib.rs
crates/tool-net/: Cargo.toml
crates/tool-net-ffi/: Cargo.toml
crates/tool-net-ffi/src/: lib.rs
crates/tool-sys/: Cargo.toml
crates/tool-sys-ffi/: Cargo.toml
crates/tool-sys-ffi/src/: lib.rs
crates/toolbase/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
examples/c/: netif_list.c
examples/csharp/: ForgeFfiNetIf.cs
