[package]
name = "tool-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
tool-net-ffi = { path = "../tool-net-ffi", optional = true }
tool-fs-ffi = { path = "../tool-fs-ffi", optional = true }
tool-sys-ffi = { path = "../tool-sys-ffi", optional = true }

[features]
default = []
net = ["dep:tool-net-ffi"]
fs = ["dep:tool-fs-ffi"]
sys = ["dep:tool-sys-ffi"]
full = ["net", "fs", "sys"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

