[package]
name = "tool"
version = "0.1.0"
edition = "2021"

[dependencies]
toolbase = { path = "../toolbase" }
tool-net = { path = "../tool-net", optional = true }
tool-fs = { path = "../tool-fs", optional = true }
tool-sys = { path = "../tool-sys", optional = true }

[features]
default = []
net = ["dep:tool-net"]
fs = ["dep:tool-fs"]
sys = ["dep:tool-sys"]
full = ["net", "fs", "sys"]

[lib]
path = "src/lib.rs"

